--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,3 @@
-/****** for phone ******/
-@media (min-width: 320px) {
-}
-
-/****** for tablets ******/
-@media (min-width: 768px) {
-}
-
-/****** for desktops ******/
-@media (min-width: 1200px) {
-}
-
 html {
 	font-size: 16px;
 }
@@ -187,4 +175,45 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: .875em;
+}
+
+/****** for phone******/
+@media all and (min-width: 328px)	{
+	.bottom-section {
+			justify-content: ;
+			align-items: flex-start;
+			border-top: 1px solid #eee;
+	}
+
+	.section-one,
+	.section-two,
+	.section-three {
+			border-top: none;
+			flex-basis: 50%;
+	}
+}
+
+/****** for tablets ******/
+@media all and (min-width: 768px) {
+	.bottom-section {
+			justify-content: space-between;
+			align-items: flex-start;
+			border-top: 1px solid #eee;
+	}
+
+	.section-one,
+	.section-two,
+	.section-three {
+			border-top: none;
+			flex-basis: 30%;
+	}
+}
+
+/****** for desktops ******/
+@media all and (min-width: 1200px) {
+
+	header nav ul {
+    display: flex;
+    justify-content: space-between;
+  }
 }
